# Emplayadora_ScaraRobot

SCARA_robot/3D_piezas/orignal_models/: scara separado pt1.3mf  scara separado pt2.3mf
SCARA_robot/software/: pixels_per_metric.py
SCARA_robot/software/esp32_microROS/: platformio.ini
SCARA_robot/software/esp32_microROS/extra_packages/custom_msg_svrs/: CMakeLists.txt  package.xml
SCARA_robot/software/esp32_microROS/extra_packages/custom_msg_svrs/srv/: MotorControl.srv
SCARA_robot/software/esp32_microROS/include/: AS5600.hpp  DRV8825.hpp  microros_utils.h  softI2C.hpp  utils.hpp
SCARA_robot/software/esp32_microROS/install/: local_setup.sh  setup.sh
SCARA_robot/software/esp32_microROS/src/: DRV8825.cpp  main.cpp  microros_utils.c  softI2C.cpp  utils.cpp
SCARA_robot/software/ros_scara_ws/install/: local_setup.sh  setup.sh
SCARA_robot/software/ros_scara_ws/install/custom_msg_svrs/share/custom_msg_svrs/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
SCARA_robot/software/ros_scara_ws/install/scara_control/share/scara_control/: package.sh  package.xml
SCARA_robot/software/ros_scara_ws/src/custom_msg_svrs/: CMakeLists.txt
SCARA_robot/software/ros_scara_ws/src/scara_control/: setup.py
SCARA_robot/software/ros_scara_ws/src/scara_control/scara_control/: move_motors_node.py  read_encoders_node.py
SCARA_robot/software/vision/tests/: height_measure.py
pcb_controller/: pcb_controller.kicad_pcb  pcb_controller.kicad_prl  pcb_controller.kicad_pro  pcb_controller.kicad_sch  sym-lib-table
(+31 files in other folders)
